kubernetes/prod/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    env: prod
    app: flaskapp
    layer: frontend
  name: prod-flaskapp-service
  namespace: prod
spec:
  type: NodePort
  selector:
    app: flaskapp
  ports:
    - name: api
      port: 5000
      targetPort: 5000
